--- a/hugo.toml
+++ b/hugo.toml
@@ -31,6 +31,12 @@ summaryLength = 30
     url = "/docs/about"
     weight = 3
 
+[[menu.main]]
+    name = "Download"
+    url = "https://github.com/MGX-metagenomics/MGX-gui/releases/tag/v20240109"
+    weight = 3
+
+
 [params]
   google_analytics_id=""
   homepage_button_link = '/docs'
