--- a/hugo.toml
+++ b/hugo.toml
@@ -40,7 +40,7 @@ summaryLength = 30
 [params]
   google_analytics_id=""
   homepage_button_link = '/docs'
-  homepage_button_text = 'Read The Docs'
+  homepage_button_text = 'Documentation'
   button_link='/docs/about/'
   button_text = 'About'
   homepage_intro = 'MGX metagenome analysis platform'
